Fix upper left element taking too much space in battle prep

--- a/css/main.less
+++ b/css/main.less
@@ -1977,7 +1977,6 @@ ul, ol
 .battle-prep-left-upper-wrapper
 {
   position: relative;
-  flex: 1 0 auto;
   min-height: 16em;
 
   .default-border(0 1px 1px 0);
